--- a/client/BlogAPI/src/css/home.css
+++ b/client/BlogAPI/src/css/home.css
@@ -19,7 +19,7 @@ header {
     border: 1px solid black;
     padding: 1em;
     align-items: center;
-    background-color: black;
+    background-color: rgb(18,18,18);
     color: white;
     position: sticky;
     top:0;
@@ -66,42 +66,39 @@ nav {
 .blogs {
     padding: 1em;
     width: clamp(70%,1200px, 95%);
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
     gap: 2em;
 }
 .blog-post {
     display: flex;
     flex-direction: column;
     height: 15em;
-    width: 20em;
 }
 .blog-title {
     position: absolute;
     bottom: 0%;
-    left: 50%;
-    transform: translateX(-50%);
     font-size: 1.5em;
     text-align: center;
-    color: black;
+    color: white;
 }
-.picture, .read {
+.picture{
     color: white;
     position: relative;
     border: 1px solid white;
 }
 .picture {
     flex: 1;
-    border-radius: 1em 1em 0em 0em;
+    border-radius: 1em;
+    background-color: white;
 }
 .read {
     flex:.3;
-    border-radius: 0em 0em 1em 1em;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 1.5em;
+        outline: none;
 }
 .credits {
     font-size: 2em;
@@ -130,5 +127,10 @@ footer {
     }
     .blog-section, .data-section {
         padding: 3em;
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .blogs {
+        grid-template-columns: repeat(2,1fr);
     }
 }
