--- a/client/BlogAPI/src/css/home.css
+++ b/client/BlogAPI/src/css/home.css
@@ -99,6 +99,7 @@ nav {
     justify-content: center;
     font-size: 1.5em;
         outline: none;
+        color: darkred;
 }
 .credits {
     font-size: 2em;
